--- a/template/index.html
+++ b/template/index.html
@@ -12,11 +12,11 @@
         <div class="row">
             <main class="col-md-12 ml-sm-auto col-lg-10 px-md-4 py-4">
                 <div class="row mt-4">
-                    <div class="col-4 offset-2 mb-4 mb-lg-0">
+                    <div class="col-4 offset-3 mb-4 mb-lg-0">
                         <div class="card">
                             <div class="card-body">
                               <div class="mb-3">
-                                <h1 class="h2">Backend Project Login</h1>
+                                <h1 class="h2">Login</h1>
                               </div>
                               <div class="alert alert-info alert-dismissible" role="alert">
                                 Alert about something
@@ -26,8 +26,16 @@
                                     <input id="email" class="form-control" name="email" type="email">
                                     <div class="small text-danger my-2"><em>Error message</em></d>
                                 </div>
+                                <div class="form-group mb-3">
+                                  <label for="password" class="form-label font-weight-bold">Password</label>
+                                  <input id="password" class="form-control" name="password" type="password">
+                              </div>
+                              <div class="mb-3">
+                                <a href="reset_password.html">Forgot password?</a>
+                              </div>
                               <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary">Reset Password</button>
+                                <!-- <button class="btn btn-primary">Login</button> -->
+                                <a href="dashboard.html" class="btn btn-primary">Login</a>
                               </div>
                             </div>
                         </div>
