--- a/template/reset_password.html
+++ b/template/reset_password.html
@@ -12,7 +12,7 @@
         <div class="row">
             <main class="col-md-12 ml-sm-auto col-lg-10 px-md-4 py-4">
                 <div class="row mt-4">
-                    <div class="col-4 offset-2 mb-4 mb-lg-0">
+                    <div class="col-4 offset-3 mb-4 mb-lg-0">
                         <div class="card">
                             <div class="card-body">
                               <div class="mb-3">
@@ -26,16 +26,9 @@
                                     <input id="email" class="form-control" name="email" type="email">
                                     <div class="small text-danger my-2"><em>Error message</em></d>
                                 </div>
-                                <div class="form-group mb-3">
-                                  <label for="password" class="form-label font-weight-bold">Password</label>
-                                  <input id="password" class="form-control" name="password" type="password">
-                              </div>
-                              <div class="mb-3">
-                                <a href="reset_password.html">Forgot password?</a>
-                              </div>
-                              <div class="d-flex justify-content-end">
-                                <!-- <button class="btn btn-primary">Login</button> -->
-                                <a href="dashboard.html" class="btn btn-primary">Login</a>
+                              <div class="d-flex justify-content-between align-items-center">
+                                <span><a href="index">Back</a></span>
+                                <button class="btn btn-primary">Reset Password</button>
                               </div>
                             </div>
                         </div>
